--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "vconsole": "^3.15.0",
     "webpack": "^5.75.0",
     "webpack-dev-server": "^4.11.1"
   },
