--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "firefox-addon-test",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "rm -rf dist/ && webpack"
+    "dev": "webpack serve",
+    "build": "rm -rf dist/ && webpack",
+    "patch": "patch-package"
   },
   "keywords": [],
   "dependencies": {
@@ -17,6 +18,7 @@
     "@dnd-kit/utilities": "^3.2.1",
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
+    "patch-package": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vconsole": "^3.15.0",
